noir/noir-repo/test_programs/compile_failure/recursive_method/src/main.nr
contract Foo {
    // Since this attribute has been deprecated, this code no longer compiles.
    #[recursive]
    fn contract_entrypoint() -> pub Field {
        1
    }
}
